# ignite

./: .gitignore  .gitmodules  .submodules  .sync-conflict-20231231-134617-DZNPF6Y.gitignore  CMakeLists.txt  README.md  todo.yaml
IgniteEngine/: IgniteEngine.sln  performance_tracking_profile.json  performance_tracking_profile_2.json
IgniteEngine/IgniteEngine/: App.cpp  App.h  ArrayBuffer.cpp  ArrayBuffer.h  ArrayBufferInfo.cpp  ArrayBufferInfo.h  Bistro.cpp  Bistro.h  Bistro.sync-conflict-20231231-134644-DZNPF6Y.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraScene.cpp  CameraScene.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  ComputeShader.cpp  ComputeShader.h  ComputeShaderTest.cpp  ComputeShaderTest.h  DefaultConf.cpp  DefaultConf.h  DefaultConfModule.cpp  DefaultConfModule.h  DefaultDispatcher.cpp  DefaultDispatcher.h  DefaultGPU.cpp  DefaultGPU.h  DefaultModule.cpp  DefaultModule.h  DefaultRenderer.cpp  DefaultRenderer.h  DepthBuffer.cpp  DepthBuffer.h  (+135 more)
IgniteEngine/IgniteEngine/ESocket/: EServerSocket.cpp  EServerSocket.h  ESocket.cpp  ESocket.h  EStream.cpp  EStream.h
IgniteEngine/IgniteEngine/Modules/inc/: Bistro.h  ComputeShaderTest.h  DebugScene.h  DefaultInit.h  DefaultModule.h  DefaultRenderingModule.h  GltfAndSkinningModule.h  GreenScreen.h  MediapipeAndGLTF.h  MediapipeModule.h  MenuModule.h  TestModule.h
IgniteEngine/IgniteEngine/Modules/src/: Bistro.cpp  ComputeShaderTest.cpp  DebugScene.cpp  DefaultInit.cpp  DefaultModule.cpp  DefaultRenderingModule.cpp  GltfAndSkinningModule.cpp  GreenScreen.cpp  MediapipeAndGLTF.cpp  MediapipeModule.cpp  MenuModule.cpp  TestModule.cpp
IgniteEngine/IgniteEngine/RayTracingCPU/inc/: Hit.h  Hittable.h  Ray.h  RayTracerCPU.h  Triangle.h
IgniteEngine/IgniteEngine/RayTracingCPU/src/: Hit.cpp  Ray.cpp  RayTracerCPU.cpp  Triangle.cpp
IgniteEngine/IgniteEngine/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
IgniteEngine/IgniteEngine/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
IgniteEngine/IgniteEngine/inc/: ArrayBufferInfo.h  Buffer.h  Buffer.hpp  Camera.h  CameraScene.h  CommandBuffer.h  CommandPool.h  ComputePipeline.h  ComputeShader.h  ComputeShaderTest.h  DefaultConf.h  DefaultDispatcher.h  DefaultGPU.h  DefaultRenderer.h  DepthBuffer.h  Device.h  DeviceBuffer.h  DeviceBuffer.hpp  Dispatcher.h  EngineApp.h  EngineEntity.h  Entity3D.h  Fence.h  GraphicShader.h  GraphicsPipeline.h  Hand2D.h  HeaderMessageProtocoleNetwork.h  IGETypes.h  Image.h  Image2D.h  ImageRessource.h  IndexBuffer.h  IndexBufferInfo.h  InitHeader.h  Instance.h  Joint.h  LoadedObjectInfo.h  LogicalDevice.h  Material.h  Mesh.h  (+36 more)
IgniteEngine/IgniteEngine/libs/: CMakeLists.txt
IgniteEngine/IgniteEngine/libs/esocket/: CMakeLists.txt
IgniteEngine/IgniteEngine/libs/fast_obj/: CMakeLists.txt
IgniteEngine/IgniteEngine/libs/imgui/: CMakeLists.txt
IgniteEngine/IgniteEngine/src/: ArrayBuffer.cpp  ArrayBufferInfo.cpp  Buffer.cpp  Camera.cpp  CameraScene.cpp  CommandBuffer.cpp  CommandPool.cpp  ComputePipeline.cpp  ComputeShader.cpp  ComputeShaderTest.cpp  DefaultConf.cpp  DefaultDispatcher.cpp  DefaultRenderer.cpp  DepthBuffer.cpp  Device.cpp  Dispatcher.cpp  EngineApp.cpp  EngineEntity.cpp  Entity3D.cpp  Fence.cpp  GraphicShader.cpp  GraphicsPipeline.cpp  Hand2D.cpp  HeaderMessageProtocoleNetwork.cpp  Image.cpp  Image2D.cpp  ImageRessource.cpp  IndexBuffer.cpp  IndexBufferInfo.cpp  InitHeader.cpp  Instance.cpp  Joint.cpp  LoadedObjectInfo.cpp  LogicalDevice.cpp  Material.cpp  Mesh.cpp  MessageProtocoleNetwork.cpp  Module.cpp  Object3D.cpp  PerspectiveCamera.cpp  (+25 more)
IgniteEngine/miscellaneous/format_to_ige/: entry.txt  res.txt  vkformat_to_igeformat.py
IgniteEngine/shaders/: compile.bat  compile_compute.bat  compile_red.bat  compute_sum.comp  debug_comput.bat  frag.frag  frag_red.frag  img_blue.comp  lbs.frag  lbs.vert  vert.vert  vert_red.vert
IgniteEngine/shaders/debug/: debug.frag  debug.vert
IgniteEngine/shaders/green_screen/: green_screen.comp
IgniteEngine/shaders/hand/: addition.comp  addition_bk.comp  frag.frag  img_error.comp  img_error_bk.comp  vert.vert
IgniteEngine/x64/: imgui.ini
